Changes with Apache 1.3.22

  *) Change to the EXPAT rule logic. We can now use the system's expat
     library if we want, use our own expat-lite or have Configure
     pick one for us (prefer system, but use expat-lite as a backup).
     [Jim Jagielski, Greg Stein]

  *) The manual directory is still configurable (as enabled by
     the 1.3.21 change), but its default setting was reverted to
     the pre-1.3.21 default as a subdirectory of the DocumentRoot.
     You can adapt your path in config.layout or with the
     "configure --manualdir=" switch.      [Martin Kraemer]

  *) Additional correction for the mutex changes on the TPF platform.
     [David McCreedy <McCreedy@us.ibm.com>]

  *) mod_proxy - remove Explain*; replace with ap_log_*
     [Chuck Murcko <chuck@topsail.org>]

Changes with Apache 1.3.21

  *) Enable mod_mime_magic (experimental) for Win32.  [William Rowe]

  *) Use an installed Expat library rather than the bundled Expat. This
     fixes a problem where multiple copies of Expat could be loaded
     into the process space, thus conflicting and causing strange
     segfaults. Most notably with mod_perl and XML::Parsers::Expat.
     [Greg Stein]

  *) Handle user modification of WinNT/2K service display names.  Prior
     versions of Apache only accepted identical internal and display names
     (where internal service names were space-stripped.)  [William Rowe]

  *) Introduce Win32 -W option for -k install/config to set up service
     dependencies on the workstation, snmp and other services that given
     modules or configurations might depend upon.  [William Rowe]

  *) Update the mime.types file to map video/vnd.mpegurl to mxu
     and add commonly used audio/x-mpegurl for m3u extensions.
     [Heiko Recktenwald <uzs106@uni-bonn.de>, Lars Eilebrecht]

  *) Modified mod_mime and mod_negotiation to prevent mod_negotiation 
     from serving any multiview variant containing one or more 